# minimal_poseidon

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  test_vectors.rs
