[package]
name = "minimal_poseidon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.11", default-features = false }
pasta_curves = { version = "0.3", default-features=false, features=["alloc"] }
